--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "php": ">=7.0.0",
         "craftcms/cms": "^3.0.0-beta.28",
         "vlucas/phpdotenv": "^2.4.0",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "symfony/filesystem": "^2.7 || ^3.0"
     },
     "autoload": {
         "psr-4": {
