--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "topshelfcraft/spreadsheet",
+	"name": "topshelfcraft/spreadsheet-tools",
 	"description": "A toolkit for reading, writing, and processing spreadsheet data in Craft CMS.",
 	"type": "craft-plugin",
 	"version": "3.0.0-alpha.2",
@@ -11,14 +11,15 @@
 		"excel-importer",
 		"Excel Importer",
 		"spreadsheet",
+		"spreadsheet-tools",
 		"import",
 		"excel",
 		"XLS",
 		"CSV"
 	],
 	"support": {
-		"docs": "https://raw.githubusercontent.com/TopShelfCraft/Spreadsheet",
-		"issues": "https://github.com/TopShelfCraft/Spreadsheet/issues"
+		"docs": "https://raw.githubusercontent.com/TopShelfCraft/Spreadsheet-Tools",
+		"issues": "https://github.com/TopShelfCraft/Spreadsheet-Tools/issues"
 	},
 	"license": "proprietary",
 	"authors": [
@@ -49,20 +50,20 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"topshelfcraft\\spreadsheet\\": "src/"
+			"topshelfcraft\\spreadsheettools\\": "src/"
 		}
 	},
 	"extra": {
-		"name": "Spreadsheet",
-		"handle": "spreadsheet",
+		"name": "Spreadsheet Tools",
+		"handle": "spreadsheet-tools",
 		"schemaVersion": "0.0.0.0",
 		"hasCpSettings": false,
 		"hasCpSection": false,
-		"changelogUrl": "https://raw.githubusercontent.com/TopShelfCraft/Spreadsheet/master/CHANGELOG.md",
-		"class": "topshelfcraft\\spreadsheet\\Spreadsheet",
+		"changelogUrl": "https://raw.githubusercontent.com/TopShelfCraft/Spreadsheet-Tools/master/CHANGELOG.md",
+		"class": "topshelfcraft\\spreadsheettools\\SpreadsheetTools",
 		"components": {
-			"helpers": "topshelfcraft\\spreadsheet\\services\\HelperService",
-			"spreadsheet": "topshelfcraft\\spreadsheet\\services\\SpreadsheetService"
+			"helpers": "topshelfcraft\\spreadsheettools\\services\\HelperService",
+			"spreadsheet": "topshelfcraft\\spreadsheettools\\services\\SpreadsheetService"
 		}
 	}
 }
