Updated Craft CMS dependency to 3.0.0 (required by plugin store). Removed composer.lock; it doesn't need to be in the repo.

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
 	],
 	"require": {
 		"php": ">=7.0.0",
-		"craftcms/cms": "^3.0.0-RC13",
+		"craftcms/cms": "^3.0.0",
 		"symfony/filesystem": "^2.7 || ^3.0",
 		"phpoffice/phpspreadsheet": "^1.1"
 	},
