--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "topshelfcraft/spreadsheet-tools",
 	"description": "A toolkit for reading, writing, and processing spreadsheet data in Craft CMS.",
 	"type": "craft-plugin",
-	"version": "3.0.0-alpha.2",
+	"version": "3.0.0-beta.1",
 	"keywords": [
 		"craft",
 		"cms",
